adjusted Intro component and added additional color

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -2,7 +2,7 @@
 
 .button_style {
   padding: 10px 30px;
-  background-color: $accent_color;
+  background-color: $tertiary_color;
   color: $secondary_color;
   font-weight: 600;
   border: none;
