--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,10 +3,10 @@
 // Overall Application color scheme
 $primary_color: #2f2f2f;
 $secondary_color: #fbfef9;
-$accent_color: #6d4cd8;
+$tertiary_color: #6d4cd8;
+$accent_color: #df4e4e;
 
 // context colors
-$red: #db3a34;
 $brown: #f19953;
 $gray: #a4a5a3;
 
