--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,6 +5,7 @@ $primary_color: #2f2f2f;
 $secondary_color: #fbfef9;
 $tertiary_color: #6d4cd8;
 $accent_color: #df4e4e;
+$darker_prime: #242424;
 
 // context colors
 $brown: #f19953;
