--- a/src/components/Services/Services.module.scss
+++ b/src/components/Services/Services.module.scss
@@ -12,15 +12,17 @@
     font-size: 36px;
     color: $tertiary_color;
     margin: auto;
+    padding: 1em 0;
   }
 
   ul {
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
     align-items: center;
     list-style-type: none;
     padding: 60px 95px;
-    gap: 40px;
+    width: inherit;
     background-color: $darker_prime;
 
     li {
