--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -10,6 +10,7 @@
   position: sticky;
   top: 0;
   left: 0;
+  z-index: 1;
   max-width: 100%;
   width: 100%;
   background-color: $primary_color;
