--- a/src/components/Services/Services.module.scss
+++ b/src/components/Services/Services.module.scss
@@ -19,7 +19,8 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    align-items: center;
+    align-items: start;
+    gap: 1.5em 0;
     list-style-type: none;
     padding: 60px 95px;
     width: inherit;
