--- a/src/components/Services/Services.module.scss
+++ b/src/components/Services/Services.module.scss
@@ -20,9 +20,9 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: start;
-    gap: 1.5em 0;
+    gap: 1.5em 0.8em;
     list-style-type: none;
-    padding: 60px 95px;
+    padding: 60px 70px;
     width: inherit;
     background-color: $darker_prime;
 
