--- a/src/components/Intro/Intro.module.scss
+++ b/src/components/Intro/Intro.module.scss
@@ -2,7 +2,7 @@
 
 .intro_header {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: wrap-reverse;
   gap: 20px 10px;
   justify-content: space-evenly;
   align-items: center;
