--- a/src/styles/_global.module.scss
+++ b/src/styles/_global.module.scss
@@ -1,20 +1,18 @@
-@import "../styles/variables";
+@import "./variables.scss";
 
-:global {
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: $global_font_family;
-  }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: $global_font_family;
+}
 
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6,
-  p {
-    color: $secondary_color;
-  }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  color: $secondary_color;
 }
