Image within Sample Works Layout fixed

--- a/src/components/Image/Image.module.scss
+++ b/src/components/Image/Image.module.scss
@@ -4,6 +4,7 @@
 
 .primary_style {
   display: flex;
+  flex-wrap: wrap;
   gap: 20px;
   justify-content: center;
   align-items: center;
@@ -70,6 +71,7 @@
 
 .secondary_style {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   gap: 20px;
